--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
 <label>Please Select your Gender</label>
 <input type="radio"name="gender"> <label>Male</label>
 <input type="radio" name="gender"> <label>female</label>
-
+<br/>
 <label>Enter yout Username</label>
 <input type="text"/>
 <br/>
@@ -47,18 +47,15 @@
 <option value="3">Iran</option>
 <option value="4">S Korea</option>
 <option value="5">Germany</option>
+</select>
+<br/>
+<button type="reset">Clear</button>
 </form>
+<h3>End of Form</h3>
 
 
 
 </body>
-
-
-
-
-
-
-
 
 
 </html>
