10th Oct 2022-CSS

--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,19 @@
 <br/>
 <button type="reset">Clear</button>
 </form>
-<h3>End of Form</h3>
+
+</div>
+
+<div>
+    Something else
+    </div>
+
+    <span>
+        This is Span 1
+        </span>
+        <span>
+            
+    </span>
 
 
 
