--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -5,14 +5,21 @@
 <!-- Head includes header  -->
 <head>
 
+    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="../common.css">
+    <style>    
+
+    </style>
+
 </head>
 
 <!-- body contains all the controls UI -->
 <body>
-<!-- <h1>Please Sign Up</h1> -->
-<h2>Please Sign Up</h2>
+<h1 class="borderline" id="HeadContainer">You need to signup before you can use our services</h1>
+<h2 class="borderline" id="HeadContainer">Please Sign Up</h2>
 <!-- <h3>Please Sign Up</h3> -->
 <!-- <h4>Please sign Up</h4> -->
+<div id="formContainer">
 <form>
     <label>Enter your name</label>
 <input type="text"/>
@@ -40,7 +47,7 @@
 <textarea cols="30" rows="3"></textarea>
 <br/>
 <label>Select your Country</label>
-<select name="country" if="country">
+<select name="country" id="country">
 <option value="0">USA</option>
 <option value="1">India</option>
 <option value="2">China</option>
@@ -58,13 +65,13 @@
     Something else
     </div>
 
-    <span>
+    <span class="borderline">
         This is Span 1
         </span>
-        <span>
-            
+        <span class="borderline">
+            This is Span 2
     </span>
-
+<span class="borderline">This is Span 3</span>
 
 
 </body>
